Bank system edited

--- a/Bank/index.html
+++ b/Bank/index.html
@@ -10,12 +10,14 @@
 
     <h3>The Program Does the Following : </h3>
     <ul>
-        <li>Deposit money </li>
-        <li>Withdraw money </li>
-        <li>Show Balance in the Account </li>
-        <li>Transfer money into another Account </li>
+        <li>Deposit </li>
+        <li>Withdraw </li>
+        <li>Show balance </li>
+        <li>Transfer into another account </li>
     </ul>
 
+
+    <!-- Adding External Js  -->
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
