Some comments added and contents changed

--- a/Bank/index.html
+++ b/Bank/index.html
@@ -10,10 +10,10 @@
 
     <h3>The Program Does the Following : </h3>
     <ul>
-        <li>Deposit </li>
-        <li>Withdraw </li>
-        <li>Show balance </li>
-        <li>Transfer into another account </li>
+        <li>Deposit money to own account</li>
+        <li>Withdraw money from own account</li>
+        <li>Show balance of own account</li>
+        <li>Transfer money into another account</li>
     </ul>
 
 
