Some contents changed in calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,14 +14,14 @@
 
     <h3>The Program Does the Following : </h3>
     <ul>
-        <li>Take Operation </li>
-        <li>Take Data to Operate </li>
-        <li>Perform a specific Operation </li>
+        <li>Take Operation type like addition, subtraction, multiplication, division and others</li>
+        <li>Take Data to Operate e.g numbers</e></li>
+        <li>Perform a specific Operation (do the addition, subtraction or other operations)</li>
         <li>Display the Result </li>
     </ul>
 
 
-    <!-- Adding External Js  -->
+    
     <script src="./assets/js/app.js"></script>
 
 </body>
